# search-engine

./: .gitignore  README.md  config.yaml  docker-compose.yaml  requirements.txt
cpp_modules/: CMakeLists.txt
cpp_modules/boolean_index/: CMakeLists.txt
cpp_modules/boolean_index/src/: index_builder.cpp  index_builder.h  inverted_index.cpp  inverted_index.h  main.cpp
cpp_modules/boolean_index/test/: test_index.cpp
cpp_modules/boolean_search/: CMakeLists.txt
cpp_modules/boolean_search/src/: boolean_search.cpp  boolean_search.h  main.cpp  query_evaluator.cpp  query_evaluator.h  query_parser.cpp  query_parser.h  test_simple.cpp
cpp_modules/boolean_search/test/: test_search.cpp
cpp_modules/data_structures/: CMakeLists.txt  ds_avl_tree.h  ds_bit_vector.h  ds_hash_table.h  ds_string.h  ds_vector.h  hash_table.cpp
cpp_modules/data_stuctures/: CMakeLists.txt  avl_tree.cpp  avl_tree.h  bit_vector.h  hash_table.h  string.h  vector.h
cpp_modules/stemmer/: CMakeLists.txt
cpp_modules/stemmer/src/: main.cpp  stemmer.cpp  stemmer.h
cpp_modules/stemmer/test/: test_stemmer.cpp
cpp_modules/tokenizer/: CMakeLists.txt
cpp_modules/tokenizer/src/: tokenizer.cpp  tokenizer.h
cpp_modules/tokenizer/test/: test_tokenizer.cpp
report/: main.tex
reports/: index_stats.txt
scripts/: build_and_search.sh  build_cpp.sh  build_index.py  cpp_search_wrapper.py  export_to_cpp.py  run_crawler.py  run_parallel_crawlers.py  search_cli.py  setup.sh  simple_python_search.py  test_cpp_search.py  test_system.py
src/: __init__.py
src/crawler/: __init__.py  crawler.py  database_handler.py  page_downloader.py  robots_parser.py  source_parsers.py  universal_crawler.py  url_manager.py
src/utils/: __init__.py  config_loader.py  logger.py  mongodb_client.py
src/zipf_analysis/: __init__.py  run_zipf_analysys.py  statistics_calculator.py  visualizer.py  zipf_analyzer.py
